package ar.edu.itba.ss

class SimulationState(
    val time: Double,
    val x: DoubleArray,
    val vx: DoubleArray,
    val y: DoubleArray,
    val vy: DoubleArray
)